--- a/XamarinSpikes/DroidSpike/MediaBroadcastReceiver/Resources/Layout/Main.axml
+++ b/XamarinSpikes/DroidSpike/MediaBroadcastReceiver/Resources/Layout/Main.axml
@@ -2,12 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<Button  
-    android:id="@+id/MyButton"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/Hello"
-    />
+    android:layout_height="fill_parent">
+    <Button
+        android:id="@+id/MyButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Generate Image" />
+    <Button
+        android:id="@+id/scanButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Start Scanning" />
+    <Button
+        android:id="@+id/newlineButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="NewLine" />
 </LinearLayout>
