The list view is set up, time to add the header.

--- a/XamarinSpikes/MvxListWithHeader/MvxListWithHeader.Droid/Resources/Layout/FirstView.axml
+++ b/XamarinSpikes/MvxListWithHeader/MvxListWithHeader.Droid/Resources/Layout/FirstView.axml
@@ -4,16 +4,11 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-  <EditText
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:textSize="40dp"
-    local:MvxBind="Text Hello"
-    />
-  <TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:textSize="40dp"
-    local:MvxBind="Text Hello"
-    />
+    <MvxListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        local:MvxBind="ItemsSource Quotes"
+        local:MvxItemTemplate="@layout/simple_list_item" />
 </LinearLayout>
