Added header and footer code.

--- a/XamarinSpikes/MvxListWithHeader/MvxListWithHeader.Droid/Resources/Layout/FirstView.axml
+++ b/XamarinSpikes/MvxListWithHeader/MvxListWithHeader.Droid/Resources/Layout/FirstView.axml
@@ -4,11 +4,13 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <MvxListView
+    <MvxListViewWithHeader
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:divider="@null"
         android:dividerHeight="0dp"
         local:MvxBind="ItemsSource Quotes"
-        local:MvxItemTemplate="@layout/simple_list_item" />
+        local:MvxItemTemplate="@layout/simple_list_item"
+        local:header="@layout/header"
+        local:footer="@layout/footer" />
 </LinearLayout>
