--- a/XamarinSpikes/DroidSpike/PhotoGridView/Resources/Layout/Main.axml
+++ b/XamarinSpikes/DroidSpike/PhotoGridView/Resources/Layout/Main.axml
@@ -25,15 +25,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/gallery1" />
     <GridView
-        android:minWidth="25px"
-        android:minHeight="25px"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:numColumns="4"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
-        android:stretchMode="columnWidth"
+        android:stretchMode="spacingWidth"
         android:gravity="center"
         android:id="@+id/gridView1"
-        android:fastScrollEnabled="true" />
+        android:numColumns="auto_fit"
+        android:fastScrollEnabled="true"
+        android:columnWidth="115dp" />
 </LinearLayout>
