--- a/XamarinSpikes/DroidSpike/SwipeyView/Resources/layout/Main.axml
+++ b/XamarinSpikes/DroidSpike/SwipeyView/Resources/layout/Main.axml
@@ -2,4 +2,12 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+    <android.support.v4.view.PagerTabStrip
+        android:id="@+id/tabStrip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="#33b5e5"
+        android:textColor="#fff" />
+</android.support.v4.view.ViewPager>
