--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
@@ -14,28 +14,14 @@
 
     <ListView ItemsSource="{Binding Categories.Result}" IsGroupingEnabled="false" ItemSelected="OnItemSelected">
 
-      <!-->
-      <ListView.GroupHeaderTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <StackLayout Padding="5,0,0,0" VerticalOptions="StartAndExpand" Orientation="Vertical">
-              <Label Text="{Binding Title}" YAlign="Center" />
-            </StackLayout>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.GroupHeaderTemplate>
-      <!-->
-
       <ListView.ItemTemplate>
         <DataTemplate>
 
           <ViewCell>
-            <Label Text="{Binding .}" BackgroundColor = "Red" YAlign="Center" Font="Medium" />
+            <Label Text="{Binding .}" YAlign="Center" Font="Large" />
           </ViewCell>
-
         </DataTemplate>
       </ListView.ItemTemplate>
-
     </ListView>
   </StackLayout>
 </ContentPage>
