Adding barcode scannig

--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
@@ -12,6 +12,8 @@
              HorizontalOptions="FillAndExpand" />
       <Button Text ="Search"
         Command="{Binding SearchCommand}" />
+      <Button Text ="Scan"
+        Command="{Binding ScanCommand}" />
     </StackLayout>
 
     <Frame>
