--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShoppingCart.Views.CategoriesListPage"
              xmlns:local="clr-namespace:ShoppingCart;assembly=ShoppingCart"
-             BindingContext="{x:Static local:App.CategoriesListViewModel}">
+             BindingContext="{x:Static local:App.CategoriesListViewModel}"
+             BackgroundColor="White" >
 
   <StackLayout VerticalOptions="FillAndExpand" Padding="50">
     <StackLayout VerticalOptions="FillAndExpand" Orientation="Horizontal">
