--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/LoginPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/LoginPage.xaml
@@ -3,14 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ShoppingCart;assembly=ShoppingCart"
              BindingContext="{x:Static local:App.LoginViewModel}"
-             x:Class="ShoppingCart.Views.LoginPage">
+             x:Class="ShoppingCart.Views.LoginPage"
+             BackgroundColor="White" >
 
   <StackLayout VerticalOptions="FillAndExpand" Padding="50">
 
     <Frame Padding="75">
       <Label Text="Login" 
         Font="Bold,Large"
-        TextColor="Yellow"
+        TextColor="Blue"
         HorizontalOptions="Center" />
     </Frame>
 
