--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/Page2.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/Page2.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-					   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-					   x:Class="ShoppingCart.Views.Page2">
-	<Label Text="Welcome to the second page" VerticalOptions="Center" HorizontalOptions="Center" />
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="ShoppingCart.Views.Page2"
+             BackgroundColor="White" >
+             
+  <Label Text="Welcome to the second page" VerticalOptions="Center" HorizontalOptions="Center" />
 </ContentPage>
