--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShoppingCart.Views.ProductPage"
              xmlns:local="clr-namespace:ShoppingCart;assembly=ShoppingCart"
-             BindingContext="{x:Static local:App.ProductViewModel}">
+             BindingContext="{x:Static local:App.ProductViewModel}"
+             BackgroundColor="White" >
+             
   <ScrollView>
     <StackLayout VerticalOptions="FillAndExpand" Padding="50">
       <Label Text="{Binding Product.Name}"
