--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductsListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductsListPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShoppingCart.Views.ProductsListPage"
              xmlns:local="clr-namespace:ShoppingCart;assembly=ShoppingCart"
-             BindingContext="{x:Static local:App.ProductsListViewModel}">
+             BindingContext="{x:Static local:App.ProductsListViewModel}"
+             BackgroundColor="White" >
 
   <StackLayout VerticalOptions="FillAndExpand" Padding="50">
     <Frame>
