--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductPage.xaml
@@ -5,12 +5,17 @@
              xmlns:local="clr-namespace:ShoppingCart;assembly=ShoppingCart"
              BindingContext="{x:Static local:App.ProductViewModel}"
              BackgroundColor="White" >
-             
+
   <ScrollView>
     <StackLayout VerticalOptions="FillAndExpand" Padding="50">
       <Label Text="{Binding Product.Name}"
         HorizontalOptions="Center"
-        Font="Bold,Large" />
+        Font="Bold,Large" >
+        <Label.TextColor>
+          <OnPlatform x:TypeArguments="Color"
+             Android="#afcca6" />
+        </Label.TextColor>
+      </Label>
 
       <Image Aspect="AspectFill"
              HorizontalOptions="FillAndExpand"
