--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductsListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductsListPage.xaml
@@ -10,7 +10,12 @@
     <Frame>
       <Label Text="{Binding Title, Mode=TwoWay}"
         HorizontalOptions="Center"
-        Font="Bold,Large" />
+        Font="Bold,Large" >
+        <Label.TextColor>
+          <OnPlatform x:TypeArguments="Color"
+             Android="#afcca6" />
+        </Label.TextColor>
+      </Label>
     </Frame>
 
     <ListView ItemsSource="{Binding Products}" ItemSelected="OnItemSelected">
