--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/WelcomePage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/WelcomePage.xaml
@@ -9,12 +9,7 @@
   <StackLayout
     VerticalOptions="Center">
     <Frame>
-      <Label Text="Welcome to The Store" Font="Bold, Large" HorizontalOptions="Center" >
-        <Label.TextColor>
-          <OnPlatform x:TypeArguments="Color"
-             Android="#afcca6" />
-        </Label.TextColor>
-      </Label>
+      <Label Text="Welcome to The Store" Font="Bold, Large" HorizontalOptions="Center" TextColor="{x:Static local:App.AccentColor}" />
     </Frame>
 
     <Label Text="Login to start shopping" HorizontalOptions="Center" />
