--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductsListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/ProductsListPage.xaml
@@ -4,15 +4,17 @@
              x:Class="ShoppingCart.Views.ProductsListPage"
              xmlns:local="clr-namespace:ShoppingCart;assembly=ShoppingCart"
              BindingContext="{x:Static local:App.ProductsListViewModel}"
-             BackgroundColor="White" >
+             BackgroundColor="White">
 
   <StackLayout VerticalOptions="FillAndExpand" Padding="50">
     <Frame>
       <Label Text="{Binding Title, Mode=TwoWay}"
         HorizontalOptions="Center"
-        Font="Bold,Large" >
+        Font="Bold,Large">
         <Label.TextColor>
           <OnPlatform x:TypeArguments="Color"
+             iOS="Accent"
+             WinPhone="Accent"
              Android="#afcca6" />
         </Label.TextColor>
       </Label>
@@ -35,6 +37,5 @@
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
-
   </StackLayout>
 </ContentPage>
