Adding icon to actionbar for droid. not a great one, but hey, it does the job.

--- a/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
+++ b/XamarinSpikes/ShoppingCart/ShoppingCart/ShoppingCart/Views/CategoriesListPage.xaml
@@ -11,7 +11,8 @@
     <ToolbarItem Name="Log Out" Command="{Binding LogOut}"  Order="Primary" Priority="0" >
       <ToolbarItem.Icon>
         <OnPlatform x:TypeArguments="FileImageSource"
-          WinPhone="Assets/Logout.png" />
+                    WinPhone="Assets/Logout.png"
+                    Android="ic_action_logout.png" />
       </ToolbarItem.Icon>
     </ToolbarItem>
   </ContentPage.ToolbarItems>
